codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1387
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
┌ WECODE ──────────────────────────────────────┐
~ Ask wecode to do anything                    │
└──────────────────────────────────────────────┘
  ? help                     100% context left
