codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1276
expression: "render_snapshot(&pane, area)"
---
 WECODE  • Working [0s • esc i
                              
┌ WECODE ────────────────────┐
~ Ask wecode to do anything  │
└────────────────────────────┘
  ? help   100% context left
