codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1302
expression: "render_snapshot(&pane, area)"
---
 WECODE  • Working [0s • esc interrupt]         
                                                
┌ WECODE ──────────────────────────────────────┐
~ Ask wecode to do anything                    │
└──────────────────────────────────────────────┘
  ? help                     100% context left
