codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1359
expression: "render_snapshot(&pane, area)"
---
 WECODE  • Working [0s • esc interrupt]         
  └ First detail line                           
    Second detail line                          
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
┌ WECODE ──────────────────────────────────────┐
~ Ask wecode to do anything                    │
└──────────────────────────────────────────────┘
  ? help                     100% context left
